# pgm-rust

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml
.github/workflows/: check.yml  test.yml
src/: factor.rs  graph.rs  lib.rs  pgm.rs
src/graph/: graphtype.rs  model.rs  ops.rs  traits.rs  types.rs
src/graph/graphtype/: basegraph.rs  edge.rs  edgetype.rs  node.rs  obj.rs
src/graph/ops/: edge.rs  graph.rs  graph_obj.rs  setops.rs
src/graph/ops/edge/: boolops.rs  miscops.rs  nodeops.rs
src/graph/ops/graph/: boolops.rs  edge.rs  edgeops.rs  misc.rs  miscops.rs  node.rs  nodeops.rs  search.rs
src/graph/ops/graph_obj/: setops.rs
src/graph/traits/: edge.rs  generic.rs  graph.rs  graph_obj.rs  misc.rs  node.rs  path.rs  search.rs  tree.rs  utils.rs
src/graph/types/: edge.rs  edgetype.rs  graph.rs  misc.rs  node.rs  node2.rs  path.rs  search.rs
