[package]
name = "pgm_rust"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Viva-Lambda/pgm-rust"
license = "GPL-3"
license-file = "LICENSE"
keywords = ["graph-theory", "statistics", "probabilistic-graphical-models"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
